--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-body{
+*{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-
+    box-sizing: border-box;
 }
 
 .container{
@@ -76,4 +76,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.days div:hover:not(.empty){
+    border:2px solid gray;
+    cursor: pointer;
+    
+}
+
+.today{
+    background-color: lightseagreen;
 }
